[gd_scene load_steps=23 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/Inside_Building_01.png" type="Texture" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Snow.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://player_var.tres" type="Resource" id=6]
[ext_resource path="res://weather_information.tres" type="Resource" id=7]
[ext_resource path="res://global_weather_timer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Storm_Timer.tscn" type="PackedScene" id=9]
[ext_resource path="res://Start_Weather_Timer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Doorway.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sounds/th.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/Break_Wood_01.wav" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 1.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 60 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 27.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 1 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 38, 4.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 9.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 18 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3, 9 )

[node name="Inside_Building_13" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 5 )
player_var = ExtResource( 6 )
weather_var = ExtResource( 7 )
level_name = "Inside_Building_13"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -303.0
margin_top = -187.0
margin_right = -201.0
margin_bottom = -87.0
rect_scale = Vector2( 6.13636, 3.92 )
color = Color( 0.145098, 0.188235, 0.34902, 1 )

[node name="InsideArea" type="Sprite" parent="."]
position = Vector2( 0, -22 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 2 )

[node name="Walls" type="Node" parent="."]

[node name="Wall" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, -90 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall"]
position = Vector2( 0, 8.5 )
shape = SubResource( 1 )

[node name="Wall2" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, 29 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall2"]
position = Vector2( 0, 8.5 )
shape = SubResource( 1 )

[node name="Side Wall" type="StaticBody2D" parent="Walls"]
position = Vector2( -50, -22 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Side Wall"]
position = Vector2( -9, -1 )
shape = SubResource( 2 )

[node name="Side Wall2" type="StaticBody2D" parent="Walls"]
position = Vector2( 68, -22 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Side Wall2"]
position = Vector2( -9, -1 )
shape = SubResource( 2 )

[node name="Half Wall" type="StaticBody2D" parent="Walls"]
position = Vector2( 27, -32 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Half Wall"]
position = Vector2( -8, -20.5 )
shape = SubResource( 3 )

[node name="Tiny Wall" type="StaticBody2D" parent="Walls"]
position = Vector2( 22, -32 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Tiny Wall"]
position = Vector2( 1, 9 )
shape = SubResource( 4 )

[node name="Tiny Wall2" type="StaticBody2D" parent="Walls"]
position = Vector2( 50, -32 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Tiny Wall2"]
position = Vector2( 1, 9 )
shape = SubResource( 4 )

[node name="Back Cabnits" type="StaticBody2D" parent="Walls"]
position = Vector2( -20, -75 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Back Cabnits"]
position = Vector2( 0, -5.5 )
shape = SubResource( 9 )

[node name="Fridge" type="StaticBody2D" parent="."]
position = Vector2( 8, -41 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fridge"]
position = Vector2( 2, -3.5 )
shape = SubResource( 5 )

[node name="Bed" type="StaticBody2D" parent="."]
position = Vector2( 41, -58 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed"]
position = Vector2( 0, -7 )
shape = SubResource( 6 )

[node name="Fireplace" type="StaticBody2D" parent="."]
position = Vector2( -48, 6 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fireplace"]
position = Vector2( -6, 0 )
shape = SubResource( 7 )

[node name="Cabnit" type="StaticBody2D" parent="."]
position = Vector2( 48, -36 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cabnit"]
position = Vector2( 7, 1 )
shape = SubResource( 8 )

[node name="Doorway" parent="." instance=ExtResource( 11 )]
position = Vector2( 0, 45 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Snow" parent="." instance=ExtResource( 4 )]

[node name="Door_Open_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Door_Close_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="SpawnPosTest" type="Position2D" parent="."]
position = Vector2( 0, 18 )
z_index = 1

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1, 10 )

[node name="global_weather_timer" parent="." instance=ExtResource( 8 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1, 1 )
current = true
zoom = Vector2( 0.2, 0.2 )
limit_left = -200
limit_top = -116
limit_right = 202
limit_bottom = 119
editor_draw_limits = true

[node name="Storm_Timer" parent="." instance=ExtResource( 9 )]

[node name="Start_Weather_Timer" parent="." instance=ExtResource( 10 )]

[editable path="HUD"]
[editable path="Player"]
