[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/snow_tile.png" type="Texture" id=2]
[ext_resource path="res://Snow.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Building.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://player_var.tres" type="Resource" id=7]
[ext_resource path="res://Sounds/th.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/Break_Wood_01.wav" type="AudioStream" id=11]

[node name="Outside" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 6 )
snow_amount_level_two = 6000
snow_amount_level_three = 10000
snow_speed_level_two = 0.7
snow_speed_level_three = 1.3
player_var = ExtResource( 7 )
level_name = "Outside"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -3.0
margin_top = 3.0
margin_right = 429.0
margin_bottom = 514.0
rect_scale = Vector2( 3.21725, 2.72856 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 669, 1246 )
current = true
zoom = Vector2( 0.3, 0.3 )
limit_left = 40
limit_top = 40
limit_right = 1350
limit_bottom = 1350
smoothing_speed = 10.0
editor_draw_limits = true

[node name="Snow" parent="." instance=ExtResource( 3 )]
position = Vector2( 419, -97 )
rotation = -0.168624
z_index = 2
amount = 2000
speed_scale = 1.0
randomness = 0.12

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="TextureProgress" parent="HUD" index="2"]
fill_mode = 3
script = null

[node name="Building" parent="." instance=ExtResource( 5 )]
position = Vector2( 539, 1195 )
z_index = 1

[node name="DoorPos" parent="Building" index="2"]
position = Vector2( 0, 18 )
z_index = 2

[node name="Building" parent="Building" instance=ExtResource( 5 )]
position = Vector2( 232, -37 )
z_index = 1

[node name="Building2" parent="Building" instance=ExtResource( 5 )]
position = Vector2( 355, 108 )
z_index = 1

[node name="Building3" parent="Building" instance=ExtResource( 5 )]
position = Vector2( -119, 82 )
z_index = 1

[node name="Building4" parent="Building" instance=ExtResource( 5 )]
position = Vector2( 113, -144 )
z_index = 1

[node name="Door_Open_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Door_Close_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="SpawnPosTest" type="Position2D" parent="."]
position = Vector2( 668, 1257 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 670, 1295 )

[connection signal="clear_of_storm" from="." to="HUD" method="_on_Outside_clear_of_storm"]
[connection signal="current_temp_below_freezing" from="." to="HUD" method="_on_Outside_current_temp_below_freezing"]
[connection signal="current_temp_freezing" from="." to="HUD" method="_on_Outside_current_temp_freezing"]
[connection signal="current_temp_normal" from="." to="HUD" method="_on_Outside_current_temp_normal"]
[connection signal="lower_temp_fast" from="." to="HUD" method="_on_Outside_lower_temp_fast"]
[connection signal="lower_temp_slow" from="." to="HUD" method="_on_Outside_lower_temp_slow"]
[connection signal="raise_temp_fast" from="." to="HUD" method="_on_Outside_raise_temp_fast"]
[connection signal="raise_temp_slow" from="." to="HUD" method="_on_Outside_raise_temp_slow"]
[connection signal="warn_of_weather" from="." to="HUD" method="_on_Outside_warn_of_weather"]

[editable path="HUD"]
[editable path="Building"]
